@@ -1,9 +1,9 @@
-getinfo(option) -> Result
+getinfo_raw(option) -> Result
 
 Extract and return information from a curl session,
-decoding string data in Python's default encoding at the time of the call.
+returning string data as byte strings.
 Corresponds to `curl_easy_getinfo`_ in libcurl.
-The ``getinfo`` method should not be called unless
+The ``getinfo_raw`` method should not be called unless
 ``perform`` has been called and finished.
 
 *option* is a constant corresponding to one of the
@@ -23,24 +23,18 @@ The type of return value depends on the option, as follows:
 - Options documented by libcurl to return a floating point value
   return a Python ``float``.
 - Options documented by libcurl to return a string value
-  return a Python string (``str`` on Python 2 and Python 3).
-  On Python 2, the string contains whatever data libcurl returned.
-  On Python 3, the data returned by libcurl is decoded using the
-  default string encoding at the time of the call.
-  If the data cannot be decoded using the default encoding, ``UnicodeDecodeError``
-  is raised. Use :ref:`getinfo_raw <getinfo_raw>`
-  to retrieve the data as ``bytes`` in these
-  cases.
-- ``SSL_ENGINES`` and ``INFO_COOKIELIST`` return a list of strings.
-  The same encoding caveats apply; use :ref:`getinfo_raw <getinfo_raw>`
-  to retrieve the
-  data as a list of byte strings.
+  return a Python byte string (``str`` on Python 2, ``bytes`` on Python 3).
+  The string contains whatever data libcurl returned.
+  Use :ref:`getinfo <getinfo>` to retrieve this data as a Unicode string on Python 3.
+- ``SSL_ENGINES`` and ``INFO_COOKIELIST`` return a list of byte strings.
+  The same encoding caveats apply; use :ref:`getinfo <getinfo>` to retrieve the
+  data as a list of potentially Unicode strings.
 - ``INFO_CERTINFO`` returns a list with one element
   per certificate in the chain, starting with the leaf; each element is a
   sequence of *(key, value)* tuples where both ``key`` and ``value`` are
-  strings. String encoding caveats apply; use :ref:`getinfo_raw <getinfo_raw>`
+  byte strings. String encoding caveats apply; use :ref:`getinfo <getinfo>`
   to retrieve
-  certificate data as byte strings.
+  certificate data as potentially Unicode strings.
 
 On Python 2, ``getinfo`` and ``getinfo_raw`` behave identically.
 
@@ -51,13 +45,15 @@ Example usage::
     c.setopt(pycurl.URL, "https://python.org")
     c.setopt(pycurl.FOLLOWLOCATION, 1)
     c.perform()
-    print(c.getinfo(pycurl.HTTP_CODE))
+    print(c.getinfo_raw(pycurl.HTTP_CODE))
     # --> 200
-    print(c.getinfo(pycurl.EFFECTIVE_URL))
-    # --> "https://www.python.org/"
+    print(c.getinfo_raw(pycurl.EFFECTIVE_URL))
+    # --> b"https://www.python.org/"
 
 
 Raises pycurl.error exception upon failure.
+
+*Added in version 7.43.0.2.*
 
 .. _curl_easy_getinfo:
     https://curl.haxx.se/libcurl/c/curl_easy_getinfo.html
